# libktorrent

./: .git-blame-ignore-revs  .gitignore  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  ChangeLog  KF5TorrentConfig.cmake.in  KF6TorrentConfig.cmake.in  KTorrent6Config.cmake.in  LibKTorrentConfig.cmake.in  Messages.sh  RoadMap
doc/: CMakeLists.txt  Doxyfile.in  index.md  namespaces.dox
src/: CMakeLists.txt  config-ktorrent.h.cmake  ktorrent_export.h  version.cpp  version.h
src/bcodec/: bdecoder.cpp  bdecoder.h  bencoder.cpp  bencoder.h  bnode.cpp  bnode.h  value.cpp  value.h
src/datachecker/: CMakeLists.txt  datachecker.cpp  datachecker.h  datacheckerjob.cpp  datacheckerjob.h  datacheckerlistener.h  datacheckerthread.cpp  datacheckerthread.h  multidatachecker.cpp  multidatachecker.h  singledatachecker.cpp  singledatachecker.h
src/dht/: CMakeLists.txt  announcereq.cpp  announcereq.h  announcersp.cpp  announcersp.h  announcetask.cpp  announcetask.h  database.cpp  database.h  dht.cpp  dht.h  dhtbase.cpp  dhtbase.h  dhtpeersource.cpp  dhtpeersource.h  errmsg.cpp  errmsg.h  findnodereq.cpp  findnodereq.h  findnodersp.cpp  findnodersp.h  getpeersreq.cpp  getpeersreq.h  getpeersrsp.cpp  getpeersrsp.h  kbucket.cpp  kbucket.h  kbucketentry.cpp  kbucketentry.h  kbuckettable.cpp  kbuckettable.h  kclosestnodessearch.cpp  kclosestnodessearch.h  key.cpp  key.h  node.cpp  node.h  nodelookup.cpp  nodelookup.h  pack.cpp  (+21 more)
src/diskio/: CMakeLists.txt  cache.cpp  cache.h  cachefile.cpp  cachefile.h  chunk.cpp  chunk.h  chunkmanager.cpp  chunkmanager.h  deletedatafilesjob.cpp  deletedatafilesjob.h  dndfile.cpp  dndfile.h  movedatafilesjob.cpp  movedatafilesjob.h  multifilecache.cpp  multifilecache.h  piecedata.cpp  piecedata.h  preallocationjob.cpp  preallocationjob.h  preallocationthread.cpp  preallocationthread.h  singlefilecache.cpp  singlefilecache.h
src/download/: CMakeLists.txt  chunkdownload.cpp  chunkdownload.h  chunkselector.cpp  chunkselector.h  downloader.cpp  downloader.h  httpconnection.cpp  httpconnection.h  httpresponseheader.cpp  httpresponseheader.h  packet.cpp  packet.h  piece.cpp  piece.h  request.cpp  request.h  streamingchunkselector.cpp  streamingchunkselector.h  webseed.cpp  webseed.h
src/interfaces/: blocklistinterface.cpp  blocklistinterface.h  cachefactory.cpp  cachefactory.h  chunkdownloadinterface.cpp  chunkdownloadinterface.h  chunkselectorinterface.cpp  chunkselectorinterface.h  exitoperation.cpp  exitoperation.h  logmonitorinterface.cpp  logmonitorinterface.h  monitorinterface.cpp  monitorinterface.h  peerinterface.cpp  peerinterface.h  peersource.cpp  peersource.h  piecedownloader.cpp  piecedownloader.h  queuemanagerinterface.cpp  queuemanagerinterface.h  serverinterface.cpp  serverinterface.h  torrentfileinterface.cpp  torrentfileinterface.h  torrentinterface.cpp  torrentinterface.h  trackerinterface.cpp  trackerinterface.h  trackerslist.cpp  trackerslist.h  webseedinterface.cpp  webseedinterface.h
src/magnet/: CMakeLists.txt  magnetdownloader.cpp  magnetdownloader.h  magnetlink.cpp  magnetlink.h  metadatadownload.cpp  metadatadownload.h
src/migrate/: ccmigrate.cpp  migrate.cpp
src/mse/: CMakeLists.txt  bigint.cpp  bigint.h  encryptedauthenticate.cpp  encryptedauthenticate.h  encryptedpacketsocket.cpp  encryptedpacketsocket.h  encryptedserverauthenticate.cpp  encryptedserverauthenticate.h  functions.cpp  functions.h  rc4encryptor.cpp  rc4encryptor.h  streamsocket.cpp  streamsocket.h
src/net/: CMakeLists.txt  address.cpp  address.h  addressresolver.cpp  addressresolver.h  bufferedsocket.cpp  downloadthread.cpp  downloadthread.h  networkthread.cpp  networkthread.h  packetsocket.cpp  packetsocket.h  poll.cpp  poll.h  portlist.cpp  portlist.h  reverseresolver.cpp  reverseresolver.h  serversocket.cpp  serversocket.h  socket.cpp  socket.h  socketdevice.cpp  socketdevice.h  socketgroup.cpp  socketgroup.h  socketmonitor.cpp  socketmonitor.h  socks.cpp  socks.h  socks_p.h  speed.cpp  speed.h  streamsocket.cpp  streamsocket.h  trafficshapedsocket.cpp  trafficshapedsocket.h  uploadthread.cpp  uploadthread.h  wakeuppipe.cpp  (+1 more)
src/peer/: CMakeLists.txt  accessmanager.cpp  accessmanager.h  authenticate.cpp  authenticate.h  authenticatebase.cpp  authenticatebase.h  authenticationmonitor.cpp  authenticationmonitor.h  badpeerslist.cpp  badpeerslist.h  chunkcounter.cpp  chunkcounter.h  connectionlimit.cpp  connectionlimit.h  packetreader.cpp  packetreader.h  packetwriter.cpp  peer.cpp  peer.h  peerconnector.cpp  peerconnector.h  peerdownloader.cpp  peerdownloader.h  peerid.cpp  peerid.h  peermanager.cpp  peermanager.h  peerprotocolextension.cpp  peerprotocolextension.h  peeruploader.cpp  peeruploader.h  serverauthenticate.cpp  serverauthenticate.h  superseeder.cpp  superseeder.h  utmetadata.cpp  utmetadata.h  utpex.cpp  utpex.h
src/torrent/: CMakeLists.txt  advancedchokealgorithm.cpp  advancedchokealgorithm.h  choker.cpp  choker.h  globals.cpp  globals.h  job.cpp  job.h  jobqueue.cpp  jobqueue.h  peersourcemanager.cpp  peersourcemanager.h  server.cpp  server.h  statsfile.cpp  statsfile.h  timeestimator.cpp  timeestimator.h  torrent.cpp  torrent.h  torrentcontrol.cpp  torrentcontrol.h  torrentcreator.cpp  torrentcreator.h  torrentfile.cpp  torrentfile.h  torrentfilestream.cpp  torrentfilestream.h  torrentstats.cpp  torrentstats.h  uploader.cpp  uploader.h
src/tracker/: CMakeLists.txt  httpannouncejob.cpp  httpannouncejob.h  httptracker.cpp  httptracker.h  kioannouncejob.cpp  kioannouncejob.h  tracker.cpp  tracker.h  trackermanager.cpp  trackermanager.h  udptracker.cpp  udptracker.h  udptrackersocket.cpp  udptrackersocket.h
src/upnp/: CMakeLists.txt  httprequest.cpp  httprequest.h  soap.cpp  soap.h  upnpdescriptionparser.cpp  upnpdescriptionparser.h  upnpmcastsocket.cpp  upnpmcastsocket.h  upnprouter.cpp  upnprouter.h
src/util/: CMakeLists.txt  array.cpp  array.h  autorotatelogjob.cpp  autorotatelogjob.h  bitset.cpp  bitset.h  bufferpool.cpp  bufferpool.h  circularbuffer.cpp  circularbuffer.h  compressfilejob.cpp  compressfilejob.h  constants.h  decompressfilejob.h  (+41 more)
(+219 files in other folders)
